--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,8 @@
-.starter {
-  font-size: 18px;
+.app {
+  display: flex;
+  flex-direction: column;
+  // align-items: end;
+
+  width: 100vw;
+  height: 100vh;
 }
