--- a/src/App.scss
+++ b/src/App.scss
@@ -1,8 +1,11 @@
 .app {
   display: flex;
-  flex-direction: column;
-  // align-items: end;
+  flex-direction: row;
 
-  width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
+
+  &--displayPicture {
+    height: 100vh;
+    overflow: hidden;
+  }
 }
