--- a/src/components/PicturesCatalog/PicturesCatalog.scss
+++ b/src/components/PicturesCatalog/PicturesCatalog.scss
@@ -6,15 +6,5 @@
   justify-content: center;
 
   height: max-content;
-  padding: 30px 10px 0px;
+  padding: 30px 10px;
 }
-
-// .container{
-//   display: flex;
-//   // flex-direction: row;
-//   flex-wrap: wrap;
-//   align-items: start;
-//   justify-content: start;
-
-//   width: max-content;
-// }
