--- a/src/components/SelectedPicture/SelectedPicture.scss
+++ b/src/components/SelectedPicture/SelectedPicture.scss
@@ -1,3 +1,5 @@
+@import '../../utils/styles/mixins/onDesktop';
+
 .selectedPicture {
   position: absolute;
   top: 0;
@@ -5,16 +7,16 @@
   bottom: 0;
   left: 0;
 
-  padding: 10px;
-
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
 
+  padding: 10px;
+
   background-color: #222;
 
-  @media (min-width: 500px) {
+  @include onDesktop {
     flex-direction: row-reverse;
     align-items: center;
     justify-content: center;
@@ -23,25 +25,36 @@
   &__closeButton {
     align-self: end;
 
-    width: 20px;
-    height: 20px;
-    margin-bottom: 5px;
+    width: 30px;
+    height: 30px;
+    margin-bottom: 10px;
 
     background-image: url(../../images/closeIcon.png);
     background-size: 20px 20px;
+    background-position: center;
+    background-repeat: no-repeat;
 
     cursor: pointer;
+    border-radius: 5px;
 
-    @media (min-width: 500px) {
+    &:hover {
+      background-color: rgb(69, 69, 69);
+    }
+
+    @include onDesktop {
       align-self: start;
       margin-bottom: 0;
     }
   }
 
-  &__picture {
-    max-width: 100vw;
+  &__content {
+    width: 100vw;
+    max-height: 90%;
 
-    @media (min-width: 500px) {
+    @include onDesktop {
+      width: max-content;
+      //padding-30px:
+      max-height: calc(100% + 2 * 30px);
       height: 100vh;
 
       margin-right: 10px;
